# Automate-The-Boring-Stuff-With-Django

./: Makefile  README.md  db.sqlite3  dump.rdb  exported_Student_data_2024-10-04-20-03-38.csv  exported_students_data_2024-10-04-19-44-47.csv  pyproject.toml
awd_main/: celery.py  settings.py  urls.py  views.py
dataentry/: models.py  tasks.py  tests.py  urls.py  utils.py  views.py
dataentry/management/commands/: exportdata.py  greeting.py  helloworld.py  importdata.py  insertdata.py
dataentry/migrations/: 0001_initial.py  0002_customer.py  0003_employee.py
templates/: home.html
templates/dataentry/: importdata.html
uploads/: models.py
uploads/migrations/: 0001_initial.py
