[tool.poetry]
name = "automate"
version = "0.1.0"
description = ""
authors = ["Sahil Mehdiyev <branchsahil@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
amqp = "^5.2.0"
asgiref = "^3.8.1"
async-timeout = "^4.0.3"
billiard = "^4.2.1"
celery = "^5.4.0"
click = "^8.1.7"
click-didyoumean = "^0.3.1"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
kombu = "^5.4.2"
prompt-toolkit = "^3.0.48"
python-dateutil = "^2.9.0.post0"
redis = "^5.1.1"
six = "^1.16.0"
sqlparse = "^0.5.1"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
vine = "^5.1.0"
wcwidth = "^0.2.13"
django-colorfield = "^0.11.0"
django-admin-interface = "^0.29.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

